# processamento-de-Imagens

./: README.md
03-realce-de-imagens/: README.md  pyproject.toml
03-realce-de-imagens/src/: main.ipynb  main.py
04_segmentacao_de_imagens/: README.md  pyproject.toml
04_segmentacao_de_imagens/src/: main.ipynb  main.py
05-rotulacao-de-imagens/: README.md  pyproject.toml
05-rotulacao-de-imagens/src/: rotulacao.ipynb  rotulacao.py
06-detectar-faces/: README.md  pyproject.toml
06-detectar-faces/src/: face-detection-image.ipynb  face-detection-image.py
