[tool.poetry]
name = "05-rotulacao-de-imagens"
version = "0.1.0"
description = "Exercício referente a aula 05 sobre Rotulação de Objetos de Interesse em Imagens Digitais."
authors = ["Janaína"]
readme = "README.md"
packages = [{include = "05_rotulacao_de_imagens"}]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "4.5.5.64"
jupyter = "^1.0.0"
matplotlib = "3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
